# elementary-cellular-automaton

./: .gitignore  .prettierignore  Cargo.toml  README.md  package.json  svelte.config.js  vite.config.ts
.github/workflows/: publish.yml
elementary-cellular-automaton/: Cargo.toml
elementary-cellular-automaton/src/: lib.rs  main.rs
src/: app.css  app.html  lib.rs  main.rs
src/lib/: Marker.svelte
src/routes/: +layout.svelte  +page.svelte
