[package]
name = "elementary-cellular-automaton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.3.17", features = ["derive"] }
image = "0.24.6"
js-sys = "0.3.64"
termsize = "0.1.6"
wasm-bindgen = "0.2.87"

[profile.release]
lto = "fat"
debug = true

[lib]
crate-type = ["cdylib", "rlib"]
